code25_all/scala/3338012.txt
def Lambdatest(args:Array[String]) = args.foreach(arg=>println(arg))

var arr=new Array[String](3) 
arr(0)="ram"
arr(1)="sam"
arr(2)="kam"

scala> LambdaTest(arr)                       
<console>:7: error: not found: value LambdaTest
       LambdaTest(arr)
       ^

var strArr = new string[3] {"ram","sam","kam"};

